<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fr.local.henripoitier.utils.uiutils.AppToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:left_btn="@drawable/ic_baseline_arrow_back_24"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/cart_fragment_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:itemCount="2"
                tools:listitem="@layout/cart_item" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_m"
                android:layout_marginTop="@dimen/spacing_xxl"
                android:layout_marginEnd="@dimen/spacing_m">

                <TextView
                    android:id="@+id/info_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/loading_prices"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/total_label" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xxl"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info_textView"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/reload_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xxl"
                    android:text="@string/reload_btn"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info_textView"
                    tools:visibility="gone" />

                <TextView
                    android:id="@+id/total_label"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/spacing_m"
                    android:gravity="start"
                    android:text="@string/total"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="@id/total_value"
                    app:layout_constraintEnd_toStartOf="@id/total_value"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_m"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="839 €" />

                <TextView
                    android:id="@+id/promo_label"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/spacing_xl"
                    android:layout_marginEnd="@dimen/spacing_m"
                    android:gravity="start"
                    android:text="@string/applied_promotion"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="@id/promo_value"
                    app:layout_constraintEnd_toStartOf="@id/promo_value"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/total_label" />

                <TextView
                    android:id="@+id/promo_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xl"
                    android:layout_marginEnd="@dimen/spacing_m"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@android:color/holo_red_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/total_value"
                    tools:text="-39 €" />

                <TextView
                    android:id="@+id/pay_label"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/spacing_xl"
                    android:layout_marginEnd="@dimen/spacing_m"
                    android:gravity="start"
                    android:text="@string/to_pay"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="@id/pay_value"
                    app:layout_constraintEnd_toStartOf="@id/total_value"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/promo_label" />

                <TextView
                    android:id="@+id/pay_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xl"
                    android:layout_marginEnd="@dimen/spacing_m"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/promo_value"
                    tools:text="800 €" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="pay_label,pay_value"
                    tools:visibility="gone" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_promo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="promo_label,promo_value"
                    tools:visibility="gone" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>